developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Individual_Employment__c/OJSERLIB__VEDA_Individual_Employment__c.object-meta.xml
<CustomObject>
    <label>VEDA Individual Employment</label>
    <nameField>
        <displayFormat>IE-{0000}</displayFormat>
        <label>VEDA Individual Employment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VEDA Individual Employments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>