developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Individual_Employment__c/fields/OJSERLIB__Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Employment_Type__c</fullName>
    <label>Employment Type</label>
    <length>1</length>
    <type>Text</type>
</CustomField>