developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Individual_Employment__c/fields/OJSERLIB__Name_of_Employer__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Name_of_Employer__c</fullName>
    <label>Name of Employer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>