developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Individual_Employment__c/fields/OJSERLIB__Occupation__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Occupation__c</fullName>
    <label>Occupation</label>
    <length>30</length>
    <type>Text</type>
</CustomField>